--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1> Hello </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vehicle Efficiency Visualization</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to the Vehicle Efficiency Visualization</h1>
+        <p>This project explores the efficiency of different vehicle makes and models based on various characteristics like fuel type, engine cylinders, and average mileage.</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="scene1.html">Scene 1: Overview by Fuel Type</a></li>
+            <li><a href="scene2.html">Scene 2: Efficiency and Engine Cylinders</a></li>
+            <li><a href="scene3.html">Scene 3: Make Comparison</a></li>
+        </ul>
+    </nav>
+    <footer>
+        <p>Project by Zhenbang Wu (zw12@illinois.edu).</p>
+    </footer>
+</body>
+</html>
